plang/testing/logs/false-incorrect/107/program107.p.p
? ((e (cc (oN) (Z)); mO3 (B) (dP ZV) RQ9ku, g (LO); (aG), (cJPG))).
